Add machine translation

--- a/l10n/po/ja_JP/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.3.0.Final released - Dev Service for Neo4J, Logging with Panache, Testing CLI applications and much more'\n"
@@ -34,148 +34,172 @@ msgid ""
 "author: alexeyloubyansky\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.3.0.Finalリリース - Neo4JのDev Service、Panacheによるログ取得、CLIアプリケーションのテストなど'\n"
+"date: 2021-10-06\n"
+"tags: release\n"
+"synopsis: 「Quarkus 2.3では、新機能と、全体的に多くの改良と改善が行われています」。\n"
+"author: alexeyloubyansky\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:11
+#, fuzzy
 msgid "Today, we release Quarkus 2.3.0.Final which includes a lot of refinements and improvements and some new features:"
-msgstr ""
+msgstr "本日、Quarkus 2.3.0.Finalをリリースしました。多くの改良と改善、いくつかの新機能が含まれています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:13
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:24
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Dev Service for Neo4J"
-msgstr ""
+msgstr "Neo4Jの開発サービス"
 
 #. type: Title ===
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:14
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:30
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Logging with Panache"
-msgstr ""
+msgstr "気持ちの良いロギング"
 
 #. type: Title ===
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:15
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:34
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Testing support for CLI applications"
-msgstr ""
+msgstr "CLIアプリケーションのテストサポート"
 
 #. type: Title ===
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:16
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:38
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:42
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "MongoDB Liquibase extension"
-msgstr ""
+msgstr "MongoDB Liquibase エクステンション"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:17
+#, fuzzy
 msgid "Support for Hibernate ORM interceptors"
-msgstr ""
+msgstr "Hibernate ORM インターセプターのサポート"
 
 #. type: Title ==
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:18
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Migration Guide"
-msgstr ""
+msgstr "マイグレーションガイド"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:21
+#, fuzzy
 msgid "To migrate from 2.2, please refer to https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.3[our migration guide]."
-msgstr ""
+msgstr "2.2からの移行については、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.3[移行ガイド]をご参照ください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:22
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "What's new?"
-msgstr ""
+msgstr "最新情報は？"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:27
+#, fuzzy
 msgid "Dev Services start the required containers automatically when you are developing or testing your application."
-msgstr ""
+msgstr "Dev Servicesは、アプリケーションの開発やテストを行う際に、必要なコンテナを自動的に起動します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:29
+#, fuzzy
 msgid "A lot of Quarkus extensions are already covered and, in 2.3, we added link:/guides/neo4j[a Dev Service for Neo4J]."
-msgstr ""
+msgstr "多くのQuarkusの拡張機能はすでにカバーされており、2.3では link:/guides/neo4j[Neo4Jの開発サービス]を追加しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:33
+#, fuzzy
 msgid "Logging in Quarkus now has a Panache flavor which allows you to eliminate logger related boilerplate code. See the link:/guides/logging[logging guide] for details."
-msgstr ""
+msgstr "QuarkusのロギングにPanacheのテイストが加わり、ロガー関連の定型的なコードを排除することができるようになりました。詳しくは、 link:/guides/logging[ロギングガイド]をご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:37
+#, fuzzy
 msgid "Quarkus now provides `@QuarkusMainTest` and `@QuarkusMainIntegrationTest` to facilitate testing of CLI applications. Check out the link:/guides/command-mode-reference[command mode guide] for details."
-msgstr ""
+msgstr "Quarkusでは、CLIアプリケーションのテストを容易にするために、 `@QuarkusMainTest` と `@QuarkusMainIntegrationTest` を提供しています。詳細は、 link:/guides/command-mode-reference[コマンドモードガイド]をご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:41
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:45
+#, fuzzy
 msgid "The new `quarkus-liquibase-mongodb` introduces support for Liquibase migrations to Quarkus applications that use MongoDB."
-msgstr ""
+msgstr "新しい `quarkus-liquibase-mongodb` 、MongoDBを使用するQuarkusアプリケーションへのLiquibase移行のサポートを導入しました。"
 
 #. type: Title ===
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:46
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Support for Hibernate Interceptors"
-msgstr ""
+msgstr "Hibernateインターセプターのサポート"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:49
+#, fuzzy
 msgid "link:https://docs.jboss.org/hibernate/orm/5.6/userguide/html_single/Hibernate_User_Guide.html#events[Hibernate Interceptors] are now supported in Quarkus. The link:/guides/hibernate-orm[Hibernate guide] provides all the necessary details."
-msgstr ""
+msgstr "link:https://docs.jboss.org/hibernate/orm/5.6/userguide/html_single/Hibernate_User_Guide.html#events[Hibernateインターセプター]がQuarkusでサポートされるようになりました。 link:/guides/hibernate-orm[Hibernateガイド]には必要な詳細が記載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:50
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Contributors"
-msgstr ""
+msgstr "貢献者"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:54
+#, fuzzy
 msgid "The Quarkus community is growing and has now https://github.com/quarkusio/quarkus/graphs/contributors[542 contributors].  Many many thanks to each and everyone of them."
-msgstr ""
+msgstr "Quarkusコミュニティは成長を続けており、現在 link:https://github.com/quarkusio/quarkus/graphs/contributors[542名の方にご協力いただい]ています。それぞれの方に感謝します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:56
+#, fuzzy
 msgid "In particular for the 2.3 release, thanks to Alexey Loubyansky, Andrej Vano, Andy Damevin, asamal, barreiro, Bill Burke, Chris Laprun, Clement Escoffier, Daniele Zonca, Dmitri Bourlatchkov, Eduard Tudenhoefner, Eric Deandrea, Eric Wittmann, Erin Schnabel, Evan Shortiss, Falko Modler, Fedor Dudinskiy, Felipe Carvalho dos Anjos Formentin, Foivos Zakkak, Galder Zamarreño, Geoffrey GREBERT, George Gastaldi, Georgios Andrianakis, Guillaume Le Floch, Guillaume Smet, Gwenneg Lepage, Hugo Guerrero, insectengine, Ioannis Canellos, Jaikiran Pai, Jan Martiška, Jan Martiska, Jose, Josef Smrcka, Josh V, Julien Dubois, Keita Fujii, Ken Finnigan, Kevin Wooten, Knut Wannheden, Ladislav Thon, Loïc Mathieu, luneo7, Mahaswami Software, Manaswini Das, Manyanda Chitimbo, Marc Nuri, Martin Kouba, Martin Muzikar, Matej Novotny, Matthias Cullmann, Michael Edgar, Michael Simons, Michal Karm Babacek, Michał Szynkiewicz, olivier dufour, Ozan Gunalp, Paul Robinson, Phillip Krüger, Phillip Kruger, Robbie Gemmell, Roberto Cortez, Robert Stupp, Ruggero D'Alò, Sandip Gahlot, Sanne Grinovero, Sauli Anto, sberyozkin, Sergey Beryozkin, Stephane Epardaud, Stephen Nimmo, Stéphane Épardaud, Stuart Douglas, Thomas Segismont, Vincent Sevel, Vincent van Dam, Wayne Ellis, wojciech.stryjewski, Yoann Rodière."
-msgstr ""
+msgstr "特に、2.特に2.3のリリースでは、Alexey Loubyansky、Andrej Vano、Andy Damevin、asamal、barreiro、Bill Burke、Chris Laprun、Clement Escoffier、Daniele Zonca、Dmitri Bourlatchkov、Eduard Tudenhoefner、Eric Deandrea、Eric Wittmann、Erin Schnabel、Evan Shortiss、Falko Modler、Fedor Dudinskiy、Felipe Carvalho dos Anjos Formentin,Foivos Zakkak, Galder Zamarreño, Geoffrey GREBERT, George Gastaldi, Georgios Andrianakis, Guillaume Le Floch, Guillaume Smet, Gwenneg Lepage, Hugo Guerrero, insectengine, Ioannis Canellos, Jaikiran Pai, Jan Martiška, Jan Martiska, Jose, Josef Smrcka, Josh V, Julien Dubois, Keita Fujii, Ken Finnigan,Kevin Wooten, Knut Wannheden, Ladislav Thon, Loïc Mathieu, luneo7, Mahaswami Software, Manaswini Das, Manyanda Chitimbo, Marc Nuri, Martin Kouba, Martin Muzikar, Matej Novotny, Matthias Cullmann, Michael Edgar, Michael Simons, Michal Karm Babacek, Michał Szynkiewicz, olivier dufour, Ozan Gunalp, Paul Robinson,Phillip Krüger, Phillip Kruger, Robbie Gemmell, Roberto Cortez, Robert Stupp, Ruggero D'Alò, Sandip Gahlot, Sanne Grinovero, Sauli Anto, sberyozkin, Sergey Beryozkin, Stephane Epardaud, Stephen Nimmo, Stéphane Épardaud, Stuart Douglas, Thomas Segismont, Vincent Sevel, Vincent van Dam, Wayne Ellis, wojciech.stryjewski, Yoann Rodière."
 
 #. type: Title ==
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:57
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "私たちと一緒に働きませんか？"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:60
+#, fuzzy
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "皆様からのフィードバックを大切にしていますので、バグを報告したり、改善を求めたりしてください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:62
+#, fuzzy
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusをお使いの方、または興味のある方は、恥ずかしがらずに私たちの歓迎するコミュニティに参加してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:64
+#, fuzzy
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "は、 link:https://github.com/quarkusio/quarkus/issues[GitHub]でフィードバックを行っています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:65
+#, fuzzy
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作って link:https://github.com/quarkusio/quarkus/pulls[PRをし]てください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:66
+#, fuzzy
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "link:https://quarkusio.zulipchat.com/[Zulip]や link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト]で議論することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-10-06-quarkus-2-3-0-final-released.adoc:66
+#, fuzzy
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "link:https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]で質問をしてみましょう。"
