--- a/l10n/po/ja_JP/_versions/main/guides/maven-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/maven-tooling.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-26 02:16+0000\n"
+"POT-Creation-Date: 2021-10-10 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -500,9 +500,9 @@ msgstr "開発モードで使用するコンパイラ・フラグをカスタマ
 #, no-wrap
 msgid ""
 "<plugin>\n"
-"  <groupId>io.quarkus</groupId>\n"
+"  <groupId>${quarkus.platform.group-id}</groupId>\n"
 "  <artifactId>quarkus-maven-plugin</artifactId>\n"
-"  <version>${quarkus-plugin.version}</version>\n"
+"  <version>${quarkus.platform.version}</version>\n"
 msgstr ""
 
 #. type: delimited block -
@@ -855,7 +855,7 @@ msgid ""
 "<dependencyManagement>\n"
 "    <dependencies>\n"
 "        <dependency> <1>\n"
-"            <groupId>io.quarkus.platform</groupId>\n"
+"            <groupId>${quarkus.platform.group-id}</groupId>\n"
 "            <artifactId>quarkus-bom</artifactId>\n"
 "            <version>${quarkus.platform.version}</version>\n"
 "            <type>pom</type>\n"
@@ -872,7 +872,7 @@ msgid ""
 "<build>\n"
 "    <plugins>\n"
 "        <plugin> <2>\n"
-"            <groupId>io.quarkus.platform</groupId>\n"
+"            <groupId>${quarkus.platform.group-id}</groupId>\n"
 "            <artifactId>quarkus-maven-plugin</artifactId>\n"
 "            <version>${quarkus.platform.version}</version>\n"
 "            <extensions>true</extensions> <3>\n"
@@ -1148,9 +1148,9 @@ msgid ""
 "    <plugins>\n"
 "      ...\n"
 "      <plugin>\n"
-"        <groupId>io.quarkus</groupId>\n"
+"        <groupId>${quarkus.platform.group-id}</groupId>\n"
 "        <artifactId>quarkus-maven-plugin</artifactId>\n"
-"        <version>${quarkus-plugin.version}</version>\n"
+"        <version>${quarkus.platform.version}</version>\n"
 "        <extensions>true</extensions>\n"
 "        <configuration>\n"
 "          <systemProperties>\n"
@@ -1189,9 +1189,9 @@ msgid ""
 "    <plugins>\n"
 "      ...\n"
 "      <plugin>\n"
-"        <groupId>io.quarkus</groupId>\n"
+"        <groupId>${quarkus.platform.group-id}</groupId>\n"
 "        <artifactId>quarkus-maven-plugin</artifactId>\n"
-"        <version>${quarkus-plugin.version}</version>\n"
+"        <version>${quarkus.platform.version}</version>\n"
 "        <extensions>true</extensions>\n"
 "        <configuration>\n"
 "          <properties>\n"
@@ -1264,9 +1264,9 @@ msgid ""
 "    <plugins>\n"
 "      ...\n"
 "      <plugin>\n"
-"        <groupId>io.quarkus</groupId>\n"
+"        <groupId>${quarkus.platform.group-id}</groupId>\n"
 "        <artifactId>quarkus-maven-plugin</artifactId>\n"
-"        <version>${quarkus-plugin.version}</version>\n"
+"        <version>${quarkus.platform.version}</version>\n"
 "        <extensions>true</extensions>\n"
 "        <executions>\n"
 "          <execution>\n"
@@ -1354,9 +1354,9 @@ msgid ""
 "    <plugins>\n"
 "      ...\n"
 "      <plugin>\n"
-"        <groupId>io.quarkus</groupId>\n"
+"        <groupId>${quarkus.platform.group-id}</groupId>\n"
 "        <artifactId>quarkus-maven-plugin</artifactId>\n"
-"        <version>${quarkus-plugin.version}</version>\n"
+"        <version>${quarkus.platform.version}</version>\n"
 "        <extensions>true</extensions>\n"
 "        <executions>\n"
 "          ...\n"
