Update .po files

--- a/l10n/po/ja_JP/_data/guides-latest.yaml.po
+++ b/l10n/po/ja_JP/_data/guides-latest.yaml.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-08-31 14:12+0000\n"
+"POT-Creation-Date: 2021-10-11 09:13+0000\n"
 "PO-Revision-Date: 2021-03-25 22:35+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -3512,6 +3512,26 @@ msgstr "独自のエクステンションを書く"
 #, no-wrap
 msgid "/guides/writing-extensions"
 msgstr "/guides/writing-extensions"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, no-wrap
+msgid "Provide users with initial code for extensions when generating Quarkus applications on code.quarkus.io and all the Quarkus tooling. This guide explains how to create and configure a Codestart for an extension."
+msgstr ""
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "Writing Your Own Extension"
+msgid "Writing a Codestart for an extension"
+msgstr "独自のエクステンションを書く"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/security-properties"
+msgid "/guides/extension-codestart"
+msgstr "/guides/security-properties"
 
 #. type: Hash Value - Key: cat-id
 #: >categories>
