--- a/l10n/po/ja_JP/_versions/main/guides/native-and-ssl.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/native-and-ssl.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-01 02:26+0000\n"
+"POT-Creation-Date: 2021-10-12 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -150,7 +150,7 @@ msgstr "実際は、そうではありません。マジックはネイティブ
 #. type: delimited block -
 #: upstream/_versions/main/guides/native-and-ssl.adoc:65
 #, no-wrap
-msgid "[INFO] [io.quarkus.creator.phase.nativeimage.NativeImagePhase] /opt/graalvm/bin/native-image -J-Djava.util.logging.manager=org.jboss.logmanager.LogManager -J-Dcom.sun.xml.internal.bind.v2.bytecode.ClassTailor.noOptimize=true -H:InitialCollectionPolicy=com.oracle.svm.core.genscavenge.CollectionPolicy$BySpaceAndTime -jar rest-client-1.0.0-SNAPSHOT-runner.jar -J-Djava.util.concurrent.ForkJoinPool.common.parallelism=1 -H:+PrintAnalysisCallTree -H:EnableURLProtocols=http,https --enable-all-security-services -H:-SpawnIsolates -H:+JNI --no-server -H:-UseServiceLoaderFeature -H:+StackTrace\n"
+msgid "[INFO] [io.quarkus.creator.phase.nativeimage.NativeImagePhase] /opt/graalvm/bin/native-image -J-Djava.util.logging.manager=org.jboss.logmanager.LogManager -J-Dcom.sun.xml.internal.bind.v2.bytecode.ClassTailor.noOptimize=true -H:InitialCollectionPolicy=com.oracle.svm.core.genscavenge.CollectionPolicy$BySpaceAndTime -jar rest-client-1.0.0-SNAPSHOT-runner.jar -J-Djava.util.concurrent.ForkJoinPool.common.parallelism=1 -H:+PrintAnalysisCallTree -H:EnableURLProtocols=http,https -H:-SpawnIsolates -H:+JNI --no-server -H:-UseServiceLoaderFeature -H:+StackTrace\n"
 msgstr ""
 
 #. type: Plain text
@@ -161,7 +161,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/native-and-ssl.adoc:72
 #, no-wrap
-msgid "-H:EnableURLProtocols=http,https --enable-all-security-services -H:+JNI\n"
+msgid "-H:EnableURLProtocols=http,https -H:+JNI\n"
 msgstr ""
 
 #. type: Plain text
