--- a/l10n/po/ja_JP/_versions/main/guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/neo4j.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-22 02:24+0000\n"
+"POT-Creation-Date: 2021-10-12 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -944,6 +944,20 @@ msgstr ""
 #, no-wrap
 msgid "Configuration Reference"
 msgstr "設定リファレンス"
+
+#. type: Plain text
+#: upstream/_versions/main/guides/neo4j.adoc:518
+#, no-wrap
+msgid ""
+"Each of the neo4j and bolt URI schemes permit variants that contain extra encryption and trust information.\n"
+"      The +s variants enable encryption with a full certificate check, and the +ssc variants enable encryption,\n"
+"      but with no certificate check. This latter variant is designed specifically for use with self-signed certificates.\n"
+"      The variants are basically shortcuts over explicit configuration. If you use one of them, Quarkus won't pass\n"
+"      `quarkus.neo4j.encrypted` and related to the driver creation as the driver prohibits this.\n"
+"      +\n"
+"      The only check applied when Quarkus detects a secure url (either of `+s` or `+ssc`) is to ensure availability of\n"
+"      SSL in native image and will throw `ConfigurationException` if it isn't available.\n"
+msgstr ""
 
 #~ msgid "Quarkus - Neo4j"
 #~ msgstr "Quarkus - Neo4j"
