Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/funqy-amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/funqy-amazon-lambda.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-10-14 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -459,7 +459,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/funqy-amazon-lambda.adoc:240
-msgid "There is nothing special about the POM other than the inclusion of the `quarkus-funqy-amazon-lambda` and `quarkus-test-amazon-lambda` extensions as a dependencies.  The extension automatically generates everything you might need for your lambda deployment."
+msgid "There is nothing special about the POM other than the inclusion of the `quarkus-funqy-amazon-lambda` extension as a dependency.  The extension automatically generates everything you might need for your lambda deployment."
 msgstr ""
 
 #. type: Title ==
