Update .po files

--- a/l10n/po/ja_JP/_data/guides-latest.yaml.po
+++ b/l10n/po/ja_JP/_data/guides-latest.yaml.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-10-11 09:13+0000\n"
+"POT-Creation-Date: 2021-10-14 10:11+0000\n"
 "PO-Revision-Date: 2021-03-25 22:35+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -616,25 +616,6 @@ msgstr "リアクティブ SQL クライアント"
 #| msgid "/guides/resteasy-reactive"
 msgid "/guides/rest-client-reactive"
 msgstr "/guides/resteasy-reactive"
-
-#. type: Hash Value - Key: description
-#: >categories>>guides>
-#, fuzzy, no-wrap
-#| msgid "This guide explains how your application can utilize MicroProfile JWT RBAC to provide secured access to the JAX-RS endpoints."
-msgid "This guide explains how your application can utilize SmallRye JWT to provide secured access to the JAX-RS endpoints."
-msgstr "このガイドでは、アプリケーションがMicroProfile JWT RBACを利用してJAX-RSエンドポイントへのセキュアなアクセスを提供する方法を説明します。"
-
-#. type: Hash Value - Key: title
-#: >categories>>guides>
-#, no-wrap
-msgid "Using JWT RBAC"
-msgstr "JWT RBACの使用"
-
-#. type: Hash Value - Key: url
-#: >categories>>guides>
-#, no-wrap
-msgid "/guides/security-jwt"
-msgstr "/guides/security-jwt"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
@@ -1502,8 +1483,8 @@ msgstr "JMSの使用"
 msgid "/guides/jms"
 msgstr "/guides/jms"
 
-#. type: Hash Value - Key: cat-id
-#: >categories>
+#. type: Hash Value - Key: keywords
+#: >categories> >categories>>guides>
 #, no-wrap
 msgid "security"
 msgstr "security"
@@ -1612,9 +1593,10 @@ msgstr "このガイドでは、QuarkusアプリケーションがKeycloakを使
 
 #. type: Hash Value - Key: keywords
 #: >categories>>guides>
-#, no-wrap
-msgid "sso"
-msgstr "sso"
+#, fuzzy, no-wrap
+#| msgid "security"
+msgid "sso,security"
+msgstr "security"
 
 #. type: Hash Value - Key: title
 #: >categories>>guides>
@@ -1724,6 +1706,25 @@ msgstr "OpenID Connect を使用したサービスアプリケーションの保
 #| msgid "/guides/security-openid-connect-client"
 msgid "/guides/security-openid-connect-dev-services"
 msgstr "/guides/security-openid-connect-client"
+
+#. type: Hash Value - Key: description
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "This guide explains how your application can utilize MicroProfile JWT RBAC to provide secured access to the JAX-RS endpoints."
+msgid "This guide explains how your application can utilize SmallRye JWT to provide secured access to the JAX-RS endpoints."
+msgstr "このガイドでは、アプリケーションがMicroProfile JWT RBACを利用してJAX-RSエンドポイントへのセキュアなアクセスを提供する方法を説明します。"
+
+#. type: Hash Value - Key: title
+#: >categories>>guides>
+#, no-wrap
+msgid "Using JWT RBAC"
+msgstr "JWT RBACの使用"
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, no-wrap
+msgid "/guides/security-jwt"
+msgstr "/guides/security-jwt"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
@@ -3639,6 +3640,9 @@ msgstr "コマンドモードリファレンス"
 #| msgid "/guides/command-mode-reference"
 msgid "/guides/dev-mode-differences"
 msgstr "/guides/command-mode-reference"
+
+#~ msgid "sso"
+#~ msgstr "sso"
 
 #~ msgid "Using Apache Kafka"
 #~ msgstr "Apache Kafkaの使用"
